# fa10

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  install.ps1  install.sh  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
src/: archive.rs  cli.rs  error.rs  format.rs  grow.rs  info.rs  lib.rs  main.rs  progress.rs  restore.rs  safety.rs  size.rs
tests/: cli.rs  integration.rs  progress.rs
